# alife

./: .gitignore  ALife.py  README.md  agents_to_use.txt  client.py  conf.yml  config.py  pyproject.toml  requirements.txt  run.py  server.py  setup.py
agents/: agents.py
alife/: __init__.py  aworld.py  config.py  constants.py  graphics.py  locals.py  map_editor.py  map_generator.py  map_tools.py  objects.py  sbrain.py  utils.py  world.py
alife/agents/: agent.py  discretization.py  dumb.py  evolution.py  hill_climbing.py  models.py  spaces.py
alife/brain/: coded.py  evolu.py  sarsa.py
alife/maps/: 2025.csv  2025.map  20_player.csv  20_player.map  map_4b.csv  new_2.csv  new_3.csv  new_3.map  new_4.csv
alife/rl/: agent.py  evolution.py  spaces.py
dat/dna/: README.txt
dat/log/: README.txt
dat/maps/: README.md  map_empty.txt  map_generator.py  map_med.txt
worlds/bugworld/: aworld.py  map_editor.py
